Fix Bug #31547 - Category links need less spacing and better wrapping
Updated patch from Erwin Dokter

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -291,9 +291,9 @@ input#wpSummary {
 
 .catlinks li {
 	display: inline-block;
-	line-height: 1em;
+	line-height: 1.25em;
 	border-left: 1px solid #AAA;
-	margin: 0.25em 0;
+	margin: 0.125em 0;
 	padding: 0 0.5em;
 	zoom: 1;
 	display: inline !ie;
